--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
         <!--import-->
     </dependencies>
 
