--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce
 spring.datasource.username=root
 spring.datasource.password=Mysql7!js
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
