--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,26 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce
-spring.datasource.username=root
-spring.datasource.password=Mysql7!js
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ecommerce
+#spring.datasource.username=root
+#spring.datasource.password=Mysql7!js
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:postgresql://ep-proud-waterfall-56403940-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb
+spring.datasource.username=default
+spring.datasource.password=fhQzl1UiZ9tk
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
 
 
