--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8080
 #spring.datasource.password=Mysql7!js
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:postgresql://ep-proud-waterfall-56403940-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb
+spring.datasource.url=jdbc:postgresql://ep-odd-bird-81809284-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
 spring.datasource.username=default
-spring.datasource.password=fhQzl1UiZ9tk
+spring.datasource.password=RyCPH6puSiG9
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
